<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/light_gray"
    android:orientation="vertical"
    android:padding="10dp">

    <TextView

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/f22labs_to_get_20_discount"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
        android:textColor="@color/text_title" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/freedel_to_exclude_delivery_charges"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
        android:textColor="@color/text_title" />


    <EditText
        android:id="@+id/edtCoupon"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="25dp"
        android:background="@drawable/rect_bg"
        android:hint="@string/coupon_code"
        android:inputType="textCapCharacters"
        android:padding="5dp"
        android:textColor="@color/text_title" />

    <Button
        android:id="@+id/btnApplyCoupon"
        android:layout_width="wrap_content"
        android:layout_height="35dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="15dp"
        android:background="@drawable/btn_bg"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:text="@string/apply_coupon"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
        android:textColor="@android:color/white" />

</LinearLayout>